--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -3,7 +3,13 @@
   hosts: zookeeper
   user: "{{ install_user }}"
   become: yes
+  gather_facts: no
   environment: "{{ proxy_env }}"
+
+  pre_tasks:
+    - name: 'Install Python'
+      raw: 'sudo apt -y install python'
+
   roles:
     - zookeeper
 
@@ -11,6 +17,7 @@
   hosts: zookeeper
   user: "{{ install_user }}"
   become: yes
+  gather_facts: no
   environment: "{{ proxy_env }}"
   roles:
     - exhibitor
