--- a/roles/exhibitor/files/exhibitor.service
+++ b/roles/exhibitor/files/exhibitor.service
@@ -1,11 +1,13 @@
 [Unit]
 Description=Exhibitor service
+Documentation=https://github.com/soabase/exhibitor
 
 [Service]
 Type=simple
+PIDFile=/var/run/exhibitor.pid
 User=zookeeper
 Group=zookeeper
+ExecStart=/opt/exhibitor/exhibitor.sh
 Restart=always
 WorkingDirectory=/opt/exhibitor
-
-ExecStart=/opt/exhibitor/exhibitor.sh
+SyslogIdentifier=exhibitor
