--- a/roles/exhibitor/tasks/main.yml
+++ b/roles/exhibitor/tasks/main.yml
@@ -30,25 +30,29 @@
   template: "src=zookeeper-s3-credentials.j2 dest=/opt/exhibitor/zookeeper-s3-credentials.properties owner=zookeeper group=zookeeper mode=0660"
 
 - name: Template Exhibitor properties
-  template: "src=exhibitor_properties.j2 dest=/opt/exhibitor/exhibitor.properties owner=zookeeper group=zookeeper mode=0660"
+  template: "src=exhibitor_properties.j2 dest=/opt/exhibitor/exhibitor.properties owner=zookeeper group=zookeeper mode=0660 backup=yes"
 
 - name: Template exhibitor.sh
-  template: src=exhibitor.j2 dest=/opt/exhibitor/exhibitor.sh owner=zookeeper group=zookeeper mode=0550
+  template: src=exhibitor.j2 dest=/opt/exhibitor/exhibitor.sh owner=zookeeper group=zookeeper mode=0550 backup=yes
 
 - name: Copy log4j.properties
-  copy: src=log4j.properties dest=/opt/exhibitor/log4j.properties owner=zookeeper group=zookeeper mode=0660
+  copy: src=log4j.properties dest=/opt/exhibitor/log4j.properties owner=zookeeper group=zookeeper mode=0660 backup=yes
 
 - name: Update exhibitor.jar with log4j.properties
   shell: "jar uvf /opt/exhibitor/{{ exhibitor_file }} log4j.properties"
   args:
-    chdir: /opt/exhibitor 
+    chdir: /opt/exhibitor
 
 - name: Copy Exhibitor systemd service config
-  copy: src=exhibitor.service dest=/lib/systemd/system/exhibitor.service owner=root group=root mode=0644
+  copy: src=exhibitor.service dest=/lib/systemd/system/exhibitor.service owner=root group=root mode=0644 backup=yes
 
 - name: Fix file permissions
-  shell: chown -R zookeeper:zookeeper /opt/exhibitor
-  changed_when: false
+  file:
+    path: /opt/exhibitor
+    state: directory
+    recurse: yes
+    owner: zookeeper
+    group: zookeeper
 
 - name: Set Exhibitor to autostart via systemd
   systemd:
