--- a/roles/zookeeper/vars/main.yml
+++ b/roles/zookeeper/vars/main.yml
@@ -1,4 +1,6 @@
-zookeeper_version: 3.4.10
+zookeeper_version: 3.4.14
 zookeeper_name: "zookeeper-{{ zookeeper_version }}"
 zookeeper_file: "{{ zookeeper_name }}.tar.gz"
 zookeeper_url: "http://www-eu.apache.org/dist/zookeeper/zookeeper-{{ zookeeper_version }}/{{ zookeeper_file }}"
+openjdk_java_version: 8
+proxy_env:
