--- a/roles/exhibitor/vars/main.yml
+++ b/roles/exhibitor/vars/main.yml
@@ -1,4 +1,5 @@
-exhibitor_version: 1.5.6
+# Change version according to pom.xml
+exhibitor_version: 1.6.0
 exhibitor_file: exhibitor-{{ exhibitor_version }}.jar
 exhibitor_port: 8080
 ui_style: red
