--- a/roles/zookeeper/tasks/main.yml
+++ b/roles/zookeeper/tasks/main.yml
@@ -1,19 +1,14 @@
 ---
 
-- name: Add Oracle Java PPA repo
-  apt_repository: repo='ppa:webupd8team/java'
-
-- name: Accept Oracle license (1/2)
-  shell: "echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections"
-
-- name: Accept Oracle license (2/2)
-  shell: "echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections"
+- name: Add OpenJDK Java PPA repo
+  apt_repository:
+    repo: "{{ repourl_openjdk_java | default('ppa:openjdk-r/ppa') }}"
 
 - name: Update APT cache
   apt: update_cache=true
 
-- name: Install Oracle Java
-  apt: name=oracle-java8-installer state=latest
+- name: Install OpenJDK Java
+  apt: name=openjdk-8-jdk state=latest
 
 - name: Create ZooKeeper group
   group: name=zookeeper state=present
