--- a/roles/zookeeper/tasks/main.yml
+++ b/roles/zookeeper/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- name: Update APT cache
+  apt: update_cache=true
+
 - name: Install OpenJDK {{ openjdk_java_version }} Java
   apt: name=openjdk-{{ openjdk_java_version }}-jdk state=latest
 
