Disable Kafka Manager install

--- a/zookeeper.yml
+++ b/zookeeper.yml
@@ -22,11 +22,11 @@
   roles:
     - exhibitor
 
-- name: Kafka Manager installation
-  hosts: zookeeper
-  user: "{{ install_user }}"
-  become: yes
-  gather_facts: no
-  environment: "{{ proxy_env }}"
-  roles:
-    - kafka_manager
+#- name: Kafka Manager installation
+#  hosts: zookeeper
+#  user: "{{ install_user }}"
+#  become: yes
+#  gather_facts: no
+#  environment: "{{ proxy_env }}"
+#  roles:
+#    - kafka_manager
